@startuml DER_LOGICO_SISTEMA_ACADEMICO

skinparam linetype ortho
skinparam padding 10
skinparam margin 20
skinparam nodesep 100
skinparam ranksep 150
skinparam minClassWidth 150

entity Pessoa {
  * id : int <<PK>>
  --
  nome : string
  cpf : string
  sexo : char
  data_nascimento : date
}

entity Curso {
  * id : int <<PK>>
  --
  nome : string
  sigla : string
}

entity Matricula_Curso {
  * id : int <<PK>>
  --
  aluno_id : int <<FK>>
  curso_id : int <<FK>>
  data_matricula : date
  status : string
}

entity Aluno {
  * pessoa_id : int <<PK, FK>>
  --
  curso_id : int <<FK>>
  conta_id : int <<FK>>

}

entity Professor {
  * pessoa_id : int <<PK, FK>>
    --
  conta_id : int <<FK>>
  tipo : enum
  nivel : enum

}

entity Conta {
  * id : int <<PK>>
  --
  email : string
  senha : string
  tipo : string
  status : string
  pessoa_id : int <<FK>>
}

entity Departamento {
  * id : int <<PK>>
  --
  nome : string
}

entity Oferta {
  * id : int <<PK>>
  --
  disciplina_id : int <<FK>>
  curso_id : int <<FK>>
  semestre_id : int <<FK>>
}

entity Semestre {
  * id : int <<PK>>
  --
  data_inicio : date
  data_fim : date
}


entity Disciplina {
  * id : int <<PK>>
  --
  codigo : string
  nome : string
}

entity Professor_Disciplina {
  * id : int <<PK>>
  --
  professor_id : int <<FK>>
  turma_id : int <<FK>>
  semestre : string
  carga_horaria : int
  data_inicio : date
  data_fim : date
}

entity Turma {
  * id : int <<PK>>
  --
  quantidade_vagas : int
}

entity Matricula_Disciplina {
  * id : int <<PK>>
  --
  disciplina_id : int <<FK>>
  turma_id : int <<FK>>
  data_matricula : date
  data_trancamento : date
  nota : float
  status : enum
}

entity Avaliacao {
  * id : int <<PK>>
  --
  turma_id : int <<FK>>
  titulo : string
  descricao : string
  tipo : string
  peso : float
  nota_maxima : float
  data_aplicacao : date
  prazo : date
}

entity Resultado_Avaliacao {
  * id : int <<PK>>
  --
  avaliacao_id : int <<FK>>
  matricula_disciplina_id : int <<FK>>
  nota : float
  feedback : string
  status : enum
  data_entrega : date
}

entity Aula {
  * id : int <<PK>>
  --
  data : date
  tipo : string
  conteudo : string
}

entity Frequencia {
  * id : int <<PK>>
  --
  aula_id : int <<FK>>
  matricula_disciplina_id : int <<FK>>
  presente : boolean
  data_registro : date
  observacao : string
}

entity Evento {
  * id : int <<PK>>
  --
  turma_id : int <<FK>>
  titulo : string
  descricao : string
  tipo : string
  data_inicio : datetime
  data_fim : datetime
  local : string
}

entity Material_Estudo {
  * id : int <<PK>>
  --
  disciplina_id : int <<FK>>
  titulo : string
  descricao : string
  tipo : string
  link : string
}

entity Meta_Estudo {
  * id : int <<PK>>
  --
  aluno_id : int <<FK>>
  titulo : string
  horas : int
  prazo : date
}

entity Notificacao_Conta {
  * id : int <<PK>>
  --
  conta_id : int <<FK>>
  Notificacao_id : int <<FK>>
  data_envio : datetime
  data_rescebmento : datetime
  lida : bolean
  mensagem_resposta : string
}

entity Notificacao {
  * id : int <<PK>>
  --
  conta_id : int <<FK>>
  titulo : string
  descricao : string
  tipo : string
  mensagem : string
}

entity Predio {
  * id : int <<PK>>
  --
  nome : string
  rua : string
  numero : int
  complemento : string
  bairro : string
  cidade : string
  estado : string
  cep : string
}


entity Sala {
  * id : int <<PK>>
  --
  predio_id : int <<FK>>
  codigo : string
  capacidade : int
}

entity Alocacao_Sala {
  * id : int <<PK>>
  --
  turma_id : int <<FK>>
  sala_id : int <<FK>>
  dia_semana : string
  hora_abertura : time
  hora_fechamento : time
  status : boolean
}

' Relacionamentos
Pessoa ||--o| Aluno : "PODE SER"
Pessoa ||--o| Professor : "PODE SER"
Pessoa ||--o| Conta : "TEM"
Curso ||--o{ Matricula_Curso : "OFERECE"
Aluno ||--o{ Matricula_Curso : "REALIZA"
Curso ||--o{ Disciplina : "CONTÉM"
Curso ||--o{ Oferta : "OFERECE"
Disciplina ||--o{ Oferta : "É OFERECIDA EM"
Semestre ||--o{ Oferta : "ABRANGE"
Professor ||--o{ Professor_Disciplina : "MINISTRA"
Professor ||--o{ Turma : "MINISTRA"
Conta ||--o| Aluno : "POSSUI"
Conta ||--o| Professor : "POSSUI"
Professor_Disciplina ||--o| Turma : "ASSOCIA"
Disciplina ||--o{ Matricula_Disciplina : "TEM"
Turma ||--o{ Matricula_Disciplina : "RECEBE"
Aluno ||--o{ Matricula_Disciplina : "REALIZA"
Turma ||--o{ Avaliacao : "TEM"
Avaliacao ||--o{ Resultado_Avaliacao : "GERA"
Matricula_Disciplina ||--o{ Resultado_Avaliacao : "PRODUZ"
Aula ||--o{ Frequencia : "CONTÉM"
Matricula_Disciplina ||--o{ Frequencia : "REGISTRA"
Turma ||--o{ Aula : "CONTA"
Turma ||--o{ Evento : "OCORRE EM"
Disciplina ||--o{ Material_Estudo : "PERTENCE"
Aluno ||--o{ Meta_Estudo : "DEFINE"
Conta ||--o{ Notificacao : "RECEBE"
Conta ||--o{ Notificacao_Conta : "REGISTRA"
Notificacao ||--o{ Notificacao_Conta : "RELACIONA"
Predio ||--o{ Sala : "ABRIGA"
Sala ||--o{ Alocacao_Sala : "RECEBE"
Turma ||--o{ Alocacao_Sala : "OCUPA"

@enduml
